--- a/frontend-petshop/src/styles/registration-page.css
+++ b/frontend-petshop/src/styles/registration-page.css
@@ -7,12 +7,84 @@
 }
 
 .form-container {
-  width: 900px;
-  height: 500px;
+  width: 350px;
+  height: 580px;
   padding: 30px;
   background-color: #779bd088;
   border-radius: 5px;
+
+  position: relative;
+}
+.pegada-pet-390 {
+  position: absolute;
+  top: 180px;
+  right: 10px;
+  width: 350px;
+  opacity: 0.4;
+  pointer-events: none;
+  z-index: 0;
+}
+.pegada-pet-220 {
+  position: absolute;
+  top: 60px;
+  right: -10px;
+  width: 180px;
+  opacity: 0.4;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.form-title {
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 @media (min-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .form-container {
+    width: 900px;
+    height: 500px;
+    padding: 30px;
+    background-color: #779bd088;
+    border-radius: 5px;
+
+    position: relative;
+  }
+
+  .pegada-pet-390 {
+    position: absolute;
+    top: 100px;
+    right: 60px;
+    width: 420px;
+    opacity: 0.7;
+    pointer-events: none;
+    z-index: 0;
+  }
+  .pegada-pet-220 {
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    width: 180px;
+    opacity: 0.7;
+    pointer-events: none;
+    z-index: 0;
+  }
+
+  .form {
+    width: 400px;
+    background-color: #779bd042;
+    padding: 20px;
+    border-radius: 5px;
+  }
+
+  .form-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 370px;
+  }
 }
