--- a/frontend-petshop/src/styles/client-page.css
+++ b/frontend-petshop/src/styles/client-page.css
@@ -36,7 +36,7 @@ body {
   .filter-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 1rem;
     height: 150px;
     margin: auto;
     max-width: 1100px;
