Estruturação de serviços + carrossel

--- a/frontend-petshop/src/styles/ongoing-service-card.css
+++ b/frontend-petshop/src/styles/ongoing-service-card.css
@@ -1,22 +1,26 @@
+.ongoing-service {
+  background-color: #779bd0;
+  width: 350px;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 5px;
+
+  cursor: pointer;
+}
+.ongoing-service-image {
+  width: 110px;
+  height: 110px;
+  background-color: white;
+}
+.ongoing-service-details {
+  width: 210px;
+}
+
 @media (min-width: 768px) {
   .ongoing-service {
-    background-color: #779bd0;
-    width: 390px;
-    height: 140px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    border-radius: 5px;
-
-    cursor: pointer;
-  }
-  .ongoing-service-image {
-    width: 120px;
-    height: 120px;
-    background-color: white;
-  }
-  .ongoing-service-details {
-    width: 210px;
+    width: 370px;
   }
 }
