--- a/frontend-petshop/src/styles/service-page.css
+++ b/frontend-petshop/src/styles/service-page.css
@@ -2,8 +2,12 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  padding: 20px;
 }
 
+.services-initial {
+  margin: 10px;
+}
 .services-container {
   background-color: #e8f1f2;
   border-radius: 5px;
@@ -14,9 +18,8 @@
   flex-direction: column;
 }
 
-.registrations-container {
+.registration-items {
   max-width: 500px;
-  background-color: #e8f1f2;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -26,11 +29,33 @@
   margin: auto;
 }
 
-@media (min-width: 768px) {
-  .registrations-container {
-    max-width: 1200px;
-  }
+.registration-details {
+  max-width: 1200px;
+  padding: 20px 40px;
+  text-align: center;
+}
+.registration-filter {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  margin: 10px 0px;
+}
+.registration-filter-item {
+  display: flex;
+  gap: 0.2rem;
+  align-items: center;
+}
+.registration-container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 10px;
+  border-radius: 10px;
+  display: grid;
+  background-color: #e8f1f2;
+}
 
+@media (min-width: 768px) {
   .caroussel-container {
     height: 500px;
     width: 400px;
@@ -44,5 +69,34 @@
     margin: 24px auto;
     max-width: 1200px;
     flex-direction: row;
+  }
+
+  .registration-items {
+    max-width: 1200px;
+  }
+  .registration-details {
+    max-width: 1200px;
+    padding: 20px 40px;
+    text-align: left;
+  }
+  .registration-filter {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    flex-direction: row;
+    margin: 10px 0px;
+  }
+  .registration-filter-item {
+    display: flex;
+    gap: 0.2rem;
+    align-items: center;
+  }
+  .registration-container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    display: grid;
+    background-color: #e8f1f2;
   }
 }
