--- a/frontend-petshop/src/styles/service-page.css
+++ b/frontend-petshop/src/styles/service-page.css
@@ -4,18 +4,28 @@
   gap: 10px;
   padding: 20px;
 }
-
-.services-initial {
+.services-title {
   margin: 10px;
 }
 .services-container {
-  background-color: #e8f1f2;
+  background-color: #dce6f1;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   margin: 24px auto;
   row-gap: 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
+
+  position: relative;
+  z-index: 1;
+}
+
+.osso-pet {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 0;
 }
 
 .registration-items {
@@ -28,7 +38,6 @@
   flex-wrap: wrap;
   margin: auto;
 }
-
 .registration-details {
   max-width: 1200px;
   padding: 20px 40px;
@@ -52,7 +61,8 @@
   padding: 10px;
   border-radius: 10px;
   display: grid;
-  background-color: #e8f1f2;
+  background-color: #dce6f1;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 @media (min-width: 768px) {
@@ -64,11 +74,18 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #e8f1f2;
     border-radius: 5px;
     margin: 24px auto;
     max-width: 1200px;
     flex-direction: row;
+  }
+  .osso-pet {
+    position: absolute;
+    top: 17%;
+    right: 51%;
+    opacity: 0.3;
+    pointer-events: none;
+    z-index: 0;
   }
 
   .registration-items {
@@ -97,6 +114,5 @@
     padding: 10px;
     border-radius: 10px;
     display: grid;
-    background-color: #e8f1f2;
   }
 }
