--- a/frontend-petshop/src/styles/ongoing-service-card.css
+++ b/frontend-petshop/src/styles/ongoing-service-card.css
@@ -8,12 +8,18 @@
   padding: 10px;
   border-radius: 5px;
 
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+
   cursor: pointer;
 }
 .ongoing-service-image {
   width: 110px;
   height: 110px;
-  background-color: white;
+}
+.ongoing-service-image-item {
+  width: 110px;
+  height: 110px;
+  border-radius: 5px;
 }
 .ongoing-service-details {
   width: 210px;
