implementação de dialogs para página de serviços

--- a/frontend-petshop/src/styles/ongoing-service-card.css
+++ b/frontend-petshop/src/styles/ongoing-service-card.css
@@ -1,5 +1,5 @@
 .ongoing-service {
-  background-color: #779bd0;
+  background-color: #779bd0bd;
   width: 350px;
   height: 130px;
   display: flex;
