--- a/frontend-petshop/src/styles/available-service-card.css
+++ b/frontend-petshop/src/styles/available-service-card.css
@@ -3,13 +3,15 @@
   height: 400px;
   padding: 10px;
   border-radius: 5px;
-  background-color: #779bd0;
+  background-color: #779bd0bd;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   margin: auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+
+  cursor: pointer;
 }
 
 .available-service-image {
