--- a/frontend-petshop/src/styles/header.css
+++ b/frontend-petshop/src/styles/header.css
@@ -1,12 +1,13 @@
 .header-container {
   width: 100%;
   background-color: #779bd0;
-  height: 210px;
+  height: 170px;
+  margin-bottom: 24px;
 }
 
 .header {
   width: 300px;
-  height: 210px;
+  height: 170px;
   display: block;
   margin: auto;
 }
@@ -58,7 +59,7 @@
 
   .buttons {
     display: flex;
-    width: 370px;
+    width: 230px;
     justify-content: space-between;
     align-items: center;
     margin: 0;
